@@ -964,14 +964,15 @@ fi
 
 # TEXE = extension for executable files on target
 # LEXE = extension for executable file LISP on target
+# SHREXT = extension for shared object files (a.k.a. shared libraries) on target
 if [ ${TOS} = win32 -o ${HSYSOS} = cygwin ] ; then
   TEXE='.exe'
   LEXE='.exe'
-  DLL='.dll'
+  SHREXT='.dll'
 else
   TEXE=''
   LEXE='.run'
-  DLL='.so'
+  SHREXT='.so'
 fi
 
 # TOBJ = extension for compiled modules on target
@@ -3235,7 +3236,7 @@ echol
 for f in clisp-link ; do
   echol "${f} : ${SRCDIR}${f}.in"
   XCC_CREATESHARED_=`echo "$XCC_CREATESHARED" | sed -e 's,\\$,$$,g'`
-  echotab "sed -e 's%@with_dynamic_modules@%${with_dynamic_modules}%' -e 's%@createsharedlib@%$XCC_CREATESHARED_%' -e 's%@LEXE@%${LEXE}%' -e 's%@DLL@%${DLL}%'< ${SRCDIR}${f}.in > ${f}"
+  echotab "sed -e 's%@with_dynamic_modules@%${with_dynamic_modules}%' -e 's%@createsharedlib@%$XCC_CREATESHARED_%' -e 's%@LEXE@%${LEXE}%' -e 's%@SHREXT@%${SHREXT}%'< ${SRCDIR}${f}.in > ${f}"
   echotab "chmod a+x ${f}"
   echol
 done
