@@ -1,5 +1,10 @@
 2005-03-12  Bruno Haible  <bruno@clisp.org>
 
+	* makemake.in (SHREXT): Renamed from DLL.
+	* clisp-link.in: Use @SHREXT@ instead of @DLL@.
+
+2005-03-12  Bruno Haible  <bruno@clisp.org>
+
 	* syscalls/calls.c: Assume limits.h exists.
 	* syscalls/configure.in: Don't test whether limits.h exists.
 
